Update dockerfile, security context, netpol

--- a/charts/kafka-exporter/values.yaml
+++ b/charts/kafka-exporter/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: danielqsj/kafka-exporter
+  repository: c4twithfish/kafka-exporter
   tag: latest
   pullPolicy: IfNotPresent
 
@@ -27,6 +27,7 @@ kafkaExporter:
     handshake: true
     username: ""
     password: ""
+    existingSecret: "" # has the password stored in it as SASL_USER_PASSWORD. If set, will override password 
     mechanism: ""
 
   tls:
@@ -80,8 +81,27 @@ resources: {}
   #   cpu: 100m
   #   memory: 128Mi
 
+podSecurityContext:
+  fsGroup: 1001
+
+securityContext:
+  runAsUser: 1001
+  runAsGroup: 1001
+  runAsNonRoot: true
+  allowPrivilegeEscalation: false
+  readOnlyRootFilesystem: true
+  seccompProfile:
+    type: RuntimeDefault
+  capabilities:
+    drop: ["ALL"]
+
 nodeSelector: {}
 
 tolerations: []
 
 affinity: {}
+
+networkPolicy:
+  enabled: false
+  ingress: {}
+  egress: {}
