--- a/charts/kafka-exporter/Chart.yaml
+++ b/charts/kafka-exporter/Chart.yaml
@@ -2,8 +2,7 @@ apiVersion: v1
 appVersion: "1.0"
 description: A Helm chart for Kubernetes
 name: kafka-exporter
-version: 1.2.0
-home: https://github.com/abhishekjiitr/kafka-exporter-helm
+version: 1.2.1
+home: https://github.com/c4twithshell/kafka-exporter
 maintainers:
-  - name: abhishekjiitr
-    email: abhi2254015@gmail.com
+  - name: c4twithshell
