--- a/charts/kafka-exporter/templates/deployment.yaml
+++ b/charts/kafka-exporter/templates/deployment.yaml
@@ -40,9 +40,16 @@ spec:
         {{ .Values.podLabels | toYaml | nindent 8 -}}
         {{- end }}
     spec:
+      securityContext:
+        {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          {{- if .Values.kafkaExporter.sasl.existingSecret }}
+          envFrom:
+            - secretRef:
+                name: {{ .Values.kafkaExporter.sasl.existingSecret }}
+          {{- end }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           args:
             {{- if .Values.kafkaExporter}}
@@ -59,7 +66,9 @@ spec:
             - --sasl.handshake=false
             {{- end }}
             - --sasl.username={{ .Values.kafkaExporter.sasl.username }}
+            {{- if eq .Values.kafkaExporter.sasl.existingSecret "" }}
             - --sasl.password={{ .Values.kafkaExporter.sasl.password }}
+            {{- end }}
             - --sasl.mechanism={{ .Values.kafkaExporter.sasl.mechanism }}
             {{- end }}
             {{- if .Values.kafkaExporter.tls.enabled}}
@@ -78,6 +87,8 @@ spec:
             {{- if .Values.kafkaExporter.log.enableSarama }}
             - --log.enable-sarama
             {{- end }}
+          securityContext:
+            {{- toYaml .Values.securityContext | nindent 12 }}
           ports:
             - name: metrics
               containerPort: 9308
